# GH-Yield

./: Dockerfile  FEATURE_ENGINEERING.md  README.md  docker-compose.yml  main.py  pyproject.toml
dashboards/: app.py
data/: backtest_benchmark.csv  backtest_strategy.csv  bog_page.html  features_dataset.csv  fed_funds_rate.csv  ghana_gdp.csv  ghana_inflation.csv  ghana_tbill_rates.csv  master_dataset.csv  model.joblib  model_comparison.csv  predictions_with_signals.csv  us_tbill_3m.csv  usd_ghs.csv
notebooks/: 01_Data_Collection.ipynb  02_data_alignment.ipynb  03_feature_engineering.ipynb  04_modeling.ipynb  05_strategy_engine.ipynb  06_deployment.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/1/: meta.yaml
notebooks/mlruns/1/12aeb080b64c4394bfe748ea1e8288ed/: meta.yaml
notebooks/mlruns/1/12aeb080b64c4394bfe748ea1e8288ed/metrics/: directional_accuracy  mae  r2  rmse
notebooks/mlruns/1/12aeb080b64c4394bfe748ea1e8288ed/tags/: mlflow.runName
notebooks/mlruns/1/16546c5b968c4bc284bb9cdf662f11d9/: meta.yaml
notebooks/mlruns/1/16546c5b968c4bc284bb9cdf662f11d9/metrics/: directional_accuracy  mae  r2  rmse
notebooks/mlruns/1/443d380e046c40afac1da502327d841e/: meta.yaml
notebooks/mlruns/1/488f00425c344c708a6d2a8ebe87eb52/: meta.yaml
notebooks/mlruns/1/4c9f52c2aebd424586443c00f4ecca51/: meta.yaml
notebooks/mlruns/1/4fca6d632102491aa98cc0434522a979/: meta.yaml
notebooks/mlruns/1/9e89c4f9068849e99cd7af8ec5b39acb/: meta.yaml
notebooks/mlruns/1/dca59483cc6b4a2fa4367ada81f035ba/: meta.yaml
src/: api.py
(+31 files in other folders)
