[project]
name = "gh-yield"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "fredapi>=0.5.2",
    "html5lib>=1.1",
    "jupyter>=1.1.1",
    "lxml>=6.1.1",
    "matplotlib>=3.11.0",
    "notebook>=7.5.7",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.10",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "wbgapi>=1.0.14",
    "yfinance>=1.4.1",
]
